# stonex-cms-amqp-core-tests

./: CMakeLists.txt  README.md  conanfile.py  core_test.config
config/: core_messages_test.config  core_test.config
include/common/: MockMessgeSender.h  MockMessgeSenderFactory.h
src/: main.cpp
src/common/: MockMessgeSender.cpp  MockMessgeSenderFactory.cpp
